# uchi

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  _alice_cache.pkl  brain.uchi  comprehensive_streaming.py  datasets.py  discretize.py  enwik8_subset.txt  eval_metrics.json  evaluate_omni.py  evaluate_rl.py  forest.py  generative.py  mkdocs.yml  ontology.json  predictor.py  pyproject.toml  replay.db-shm  replay.db-wal  run_tests.py  similarity.py  tabular.py  task.md  test_omni_router.py  test_score.py  timeseries.py
.agents/skills/benchmark_runner/: SKILL.md
.agents/skills/cognitive_debugger/: SKILL.md
.agents/skills/dream_tracker/: SKILL.md
.agents/skills/geometry_visualizer/: SKILL.md
.agents/skills/neuro_inspector/: SKILL.md
.agents/skills/python_communication/: SKILL.md
.agents/skills/release_readiness/: SKILL.md
.agents/skills/saliency_mapper/: SKILL.md
.agents/skills/trie_walker/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: arc_benchmark.py  benchmark.py  benchmark_baselines.py  ieee_benchmark.py  mmlu_benchmark.py  mmlu_results.json  run_benchmarks.py  run_enwik8.py  run_experiments.py  run_forest.py  streaming_benchmark.py  swebench_benchmark.py  swebench_results.json  trustworthiness.py  trustworthiness_results.json
docs/: README.md  algorithmic-walkthrough.md  architecture.md  benchmarks.md  convergent-engine.md  core-engine.md  generate-and-ground.md  generative.md  index.md  omni-router.md  python-api.md  reasoning.md  simulation-engine.md  tabular.md  timeseries.md
examples/: baselines.py  baselines_extended.py  demo_module2.py  quickstart.ipynb
experiments/: arc_dsl.py  diag_collapse.py  factcheck_oracle.py  generate_and_ground.py  mcq_discrimination.py  neural_decoder.py  relation_extract.py  skipgram_probe.py  supervised_probe.py  train_answerability.py  train_chat_decoder.py  train_decoder.py  train_qa_batched.py  train_qa_contrastive.py  transe_reason.py  verifier_probe.py
ieee_tables/: 01_main_accuracy.tex  02_logloss.tex  03_drift_accuracy.tex  03b_postdrift_recovery.tex  04_ablation.tex  05_significance.tex  06_scaling.tex  07_electricity_accuracy.tex  07b_electricity_blocks.tex  08_extended_comparison.tex  all_tables.tex
scripts/: background_rl.py  benchmark_mini.py  bootstrap_code.py  bootstrap_knowledge.py  bootstrap_specialist.py  bootstrap_ssm.py  bootstrap_wikidata.py  cognitive_debugger.py  knowledge_ingester.py  mcts_patch.py  neuro_inspector.py  offline_dream.py  offline_dreaming.py  omni_ingester.py  python_communication.py  synthetic_ontology_job.py  test_fallback.py  test_first_q.py
tasks/: 0.3.0 Itemized Deliverables.md  core_principle.md  todo.md
tests/: conftest.py  test_analytical_skills.py  test_api_harness.py  test_chat.py  test_code_engine.py  test_convergent_engine.py  test_distributional.py  test_dual_predictor.py  test_eval_suite.py  test_forest.py  test_generative_fixes.py  test_math_simulator.py  test_node_compressor.py  test_omni_router.py  test_phase5_benchmark.py  test_process.py  test_replay.py  test_routing_layer.py  test_simple.py  test_simulation_engine.py  test_skill_registry.py  test_timeseries.py  test_tokenizers.py  test_tree_search_engine.py  test_v030_items.py  test_vector_oracle.py  test_web_plugin.py  tests.py
uchi/: __init__.py  answerability.py  api.py  api_server.py  build_pipeline.py  builder.py  calibration.py  cli.py  code_engine.py  code_tokenizer.py  convergent_engine.py  conversation.py  cpu_memory.py  data_loader.py  decoder.py  deduplication.py  discretize.py  distributional.py  dual_predictor.py  experience_replay.py  forest.py  generate_and_ground.py  generative.py  goal_state.py  grammar_mask.py  grpo.py  grpo_offline_trainer.py  hoeffding.py  incremental_builder.py  intent_encoder.py  intent_router.py  long_term_store.py  memory.py  neuro_symbolic.py  node_compressor.py  omni_evaluator.py  omni_router.py  omni_tokenizer.py  online_tokenizer.py  ontology.py  (+24 more)
uchi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
uchi/data/: brain.uchi
uchi/flux/: __init__.py  attention_block.py  bitnet.py  inference_engine.py  model.py  prompt_cache.py  ssm.py  tokenizer_v2.py  tssm_block.py  vision.py
uchi/plugins/: web.py
uchi/skills/: anomaly.md  classify.md  code.md  dream.md  explain.md  forecast.md  formula.md  ingest.md  overview.md  recall.md  regress.md  search.md  teach.md  tsclassify.md
uchi/static/: app.js  index.html  style.css
uchi/tui/: __init__.py  app.py
world_knowledge/: corpus.json
