[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uchi"
version = "0.2.0"
description = "Omni-modal Deterministic Universal Sequence Predictor (ODUSP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "machine learning", "online learning", "sequence prediction",
    "time series", "concept drift", "trie", "CTW",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Pure Python — no required dependencies.
# Pure Python core dependencies
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "textual>=0.50.0",
    "torch>=2.0.0",
]

[project.urls]
Documentation = "https://github.com/JosephWoodall/uchi/tree/main/docs"
Homepage = "https://github.com/JosephWoodall/uchi"

[project.scripts]
uchi = "uchi.cli:main"

[project.optional-dependencies]
test    = ["pytest", "pytest-cov", "psutil"]
dev     = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit", "mkdocs-material", "nltk", "psutil"]
sklearn = ["scikit-learn>=1.0"]
numpy   = ["numpy>=1.20"]
pandas  = ["pandas>=1.3"]
pyspark = ["pyspark>=3.0.0"]
optuna  = ["optuna>=3.0.0"]
all     = ["scikit-learn>=1.0", "numpy>=1.20", "pandas>=1.3", "pyspark>=3.0.0", "optuna>=3.0.0", "pytest"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["uchi*"]

[tool.setuptools.package-data]
uchi = ["py.typed", "persona.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
